docs: describe required jvm options