@@ -8,10 +8,11 @@ which is based on Linux's open-by-handle API.
 Usage
 -----
 
-The vfs4j has an example NFS server wich can be started as:
+The vfs4j uses Java foreign function API which requires additional JVM options.
 
 ```
-$ sudo java -jar target/vfs4j-1.0-SNAPSHOT-jar-with-dependencies.jar /directory/to/export /path/to/export/file
+$ sudo java --add-modules jdk.incubator.foreign -Dforeign.restricted=permit \
+    -jar target/vfs4j-1.0-SNAPSHOT.jar /directory/to/export /path/to/export/file
 ```
 
 The **exports** file is compatible with standard **/etc/exports** file format.
